2007-02-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/MBeanServer.java:
	(queryMBeans(ObjectName,QueryExp)): Returned
	generically-typed Set.
	(queryNames(ObjectName,QueryExp)): Likewise.
	* javax/management/MBeanServerConnection.java:
	(queryMBeans(ObjectName,QueryExp)): Returned
	generically-typed Set.
	(queryNames(ObjectName,QueryExp)): Likewise.
	* javax/management/ObjectName.java:
	Use a generically-typed TreeMap.
	(ObjectName(String,Hashtable<String,String>):
	Genericized.
	(getKeyPropertyList()): Likewise.
	* javax/management/StandardMBean.java:
	Use a generically-typed interface class.
	(StandardMBean(Class<?>)): Genericized.
	(StandardMBean(T, Class<T>)): Likewise.
	(getImplementationClass()): Likewise.
	(getMBeanInterface()): Likewise.
	
2007-02-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/Descriptor.java:
	New file.
	* javax/management/DescriptorRead.java:
	Likewise.
	* javax/management/DescriptorAccess.java:
	Likewise.
	
2007-02-16  Matthias Klose  <doko@ubuntu.com>

	* doc/Makefile.am: Add rules to build and install man pages
	from texinfo docs.
	* doc/hacking.texinfo doc/tools.texinfo, doc/vmintegration.texinfo:
	Rename, prefix files with "cp-".
	* doc/cp-tools.texinfo: Add markup for man page generation,
	add documentation for command line options for gjar, gjavah,
	gnative2ascii, gorbd, grmid, grmiregistry, gserialver, gtnameserv.
	doc/texi2pod.pl: New, taken from the GCC sources.

2007-02-16  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/ClasspathGraphicsEnvironment.java: New file.
	* gnu/java/awt/peer/gtk/CairoSurface.java
	(CairoDataBuffer): Removed inner class.
	(CairoSurface(int,int,int,int)): New constructor.
	(CairoSurface(int,int)): Delegate to new constructor.
	(CairoSurface(SampleModel,CairoSurface,Rectangle,Point)): New constructor
	for creating child rasters.
	(create): Added int[] parameter.
	(createChild): New method.
	(createCompatibleWritableRaster): New methods.