@@ -1,3 +1,9 @@
+2007-02-19  Chris Burdess  <dog@gnu.org>
+
+	Fixes #30831
+	* gnu/xml/dom/ls/SAXEventSink.java: Only set extended document
+	  properties when reader is available.
+
 2007-02-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/MBeanServer.java:
